--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ jobs:
   test-react-app:
     runs-on: ubuntu-latest
     steps:
-      - name: Get code
-      - uses: actions/checkout@v3
+      - name: Get cod
+        uses: actions/checkout@v3
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
