main: Fix typo on workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ jobs:
   test-react-app:
     runs-on: ubuntu-latest
     steps:
-      - name: Get cod
+      - name: Get code
         uses: actions/checkout@v3
       - name: Install Node.js
         uses: actions/setup-node@v3
