--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,7 @@ jobs:
         run: npm test
 
   deploy-react-app:
+    needs: test-react-app # This job will run only if the test job is successful
     runs-on: ubuntu-latest
     steps:
       - name: Get code
